# cfg_manager

Server_Simulator/: Makefile  compile_and_run.sh  dnp3_modbus_relay_config_manager.cpp  dnp3_modbus_relay_config_manager.hpp  dnp3_modbus_types.hpp  main.cpp  srv.cpp  utr3288io.cfg
Simulator/Server_Simulator/: Makefile  bd_fsa_antigo.txt  bd_fsa_novo.txt  bd_novo_class_config.txt  common_types.hpp  compile_and_run.sh  configuracoes_fsa_cfg_loader.txt  configuracoes_fsa_server_simulator.txt  dnp3_modbus_relay_config_manager.cpp  dnp3_modbus_relay_config_manager.hpp  dnp3_modbus_types.hpp  exec  inverterUG1A.cfg  inverterUG3A.cfg  main.cpp  meterNUCD_EC4.cfg  meterNUCD_EC5.cfg  srv.cpp  srv.h  stringboxUG3A.cfg  transformerUG1_treetech.cfg  transformerUG3_treetech.cfg  transformerUG4_treetech.cfg
Simulator/Server_Simulator/Mapas_Francisco_Sa/: meterNUCD_EC1.cfg  meterNUCD_EC3.cfg  station_1.cfg  stringboxUG1A.cfg  stringboxUG5A.cfg  transformerUG2_treetech.cfg  transformerUG5_treetech.cfg
francisco_sa_maps_r2/Simulator/Server_Simulator/inih/: CMakeLists.txt
francisco_sa_maps_r2/francisco_sa_maps/: inverterUG1A.cfg  inverterUG2A.cfg  inverterUG3A.cfg  inverterUG4A.cfg  inverterUG5A.cfg  meterNUCD_EC1.cfg  meterNUCD_EC2.cfg  meterNUCD_EC3.cfg  meterNUCD_EC4.cfg  meterNUCD_EC5.cfg  station_1.cfg  stringboxUG1A.cfg  stringboxUG2A.cfg  stringboxUG3A.cfg  stringboxUG4A.cfg  stringboxUG5A.cfg  transformerUG1_treetech.cfg  transformerUG2_treetech.cfg  transformerUG3_treetech.cfg  transformerUG4_treetech.cfg  transformerUG5_treetech.cfg  utr3288io.cfg
(+12 files in other folders)
